--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -29,7 +29,7 @@
   border-radius: 25px;
 
   @media screen and (max-width: 600px) {
-    width: 98%;
+    width: 98vw;
     height: auto;
 
     margin: 2rem auto 1rem auto;
